--- a/index.html
+++ b/index.html
@@ -16,16 +16,24 @@
 
         <div class="row justify-content-center rowstyle">
             <div class="col-sm-12 col-lg-6 colstyle">
-<p>Hello</p>
+                <div id="bg-circle"></div>
+                <div id="green"></div>
+                <div id="red"></div>
+                <div id="yellow"></div>
+                <div id="blue"></div>
+                <div id="inner-circle"></div>
             </div>
 
             <div class="col-sm-12 col-lg-6 colstyle">
-<p>Hello</p>
+                <h5>How to Play!</h5>
+                <ol>
+                    <li></li>
+                </ol>
             </div>
 
         </div>
 
-       
+
 
     </div>
 </body>
