Speed and Strict Button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,24 @@
                 <div id="red"></div>
                 <div id="yellow"></div>
                 <div id="blue"></div>
-                <div id="inner-circle"></div>
+                <div id="inner-circle">
+                    <h5 class="heading">simon</h5>
+                    <div class="col-10">
+                        <h5 class="inner-heading">Speed</h5>
+                        <ul class="list-inline speedbtn">
+                            <li class="list-inline-item">1</li>
+                             <li class="list-inline-item">2</li>
+                              <li class="list-inline-item">3</li>
+                               <li class="list-inline-item">4</li>
+                        </ul>
+                    </div>
+                    <div class="col-2">
+                        <h5 class="inner-heading">Strict</h5>
+                    </div>
+
+
+
+                </div>
             </div>
 
             <div class="col-sm-12 col-lg-6 colstyle">
