--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 </head>
 
 <body>
-    <div class="container">
-
+<div class="container">   
         <div class="row justify-content-center rowstyle">
             <div class="col-sm-12 col-lg-6 colstyle">
                 <div id="bg-circle"></div>
@@ -38,8 +37,8 @@
                     <div class="container">
                         <div class="row rowstyle">
                             <div class="col-8 colstyle">
-                                <h5 class="inner-heading">Speed</h5>
-                                <ul class="list-inline speedbtn">
+                                <h5 class="inner-heading">Level</h5>
+                                <ul class="list-inline levelbtn">
                                     <li class="list-inline-item" id="level1">1</li>
                                     <li class="list-inline-item" id="level2">2</li>
                                     <li class="list-inline-item" id="level3">3</li>
@@ -83,7 +82,7 @@
 
 
 
-    </div>
+  </div>
    <script  src="assets/js/index.js"></script>
 </body>
 
